[tool.poetry]
name = "btfLib"
version = "0.1.0"
description = ""
authors = ["sonyakun <owner@sonyakun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.3.2"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
